--- a/index.html
+++ b/index.html
@@ -152,14 +152,14 @@
 												<ul class="list-group list-group-flush">
 													<li class="list-group-item"><strong>Código:</strong> 130323DC020R193289</li>
 													<li class="list-group-item"><strong>Título:</strong> Carteirinha Estudantil</li>
-													<li class="list-group-item"><strong>Descrição:</strong> Carteirinha estudantil gerada para a aluna Aluno do Descomplica, para o curso MBA em Gestão Estratégica de Projetos e Metodologias Ágeis - CM1</li>
+													<li class="list-group-item"><strong>Descrição:</strong> Carteirinha estudantil gerada para o aluno Douglas Falcão do Descomplica, para o curso MBA em Gestão Estratégica de Projetos e Metodologias Ágeis - CM1</li>
 													<li class="list-group-item"><strong>Documento emitido pelo sistema em:</strong> 01/07/2024 07:12</li>
 												</ul>				
 											</div>
 											
 											<div class="col-lg-4 col-xl-4 col-md-4 col-sm-12 pl-md-0">
 												<ul class="list-group list-group-flush">	
-														<li class="list-group-item"><strong>Proprietário:</strong> Aluno do Descomplica</li>
+														<li class="list-group-item"><strong>Proprietário:</strong> Douglas Farielo Falcão</li>
 														<li class="list-group-item"><strong>CPF:</strong> ***.315.217-**</li>
 														<li class="list-group-item"><strong>RG:</strong> **.510.235-*</li>
 														<li class="list-group-item"></li>
